# Stela

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
BAGE/: CMakeLists.txt
BAGE/src/: BAGE.cpp  BAGE.h
BAGE/src/Render/Metal/: Metal.mm
BAGE/src/Render/Vulkan/: Vulkan.cpp  Vulkan.h
Editor/: CMakeLists.txt  Info-tvOS.plist.in
Editor/src/: main.cpp
Runtime/: CMakeLists.txt  Info.plist.in
Runtime/src/: main.cpp
Scripts/: CMakeLists.txt  DotNetHost.cpp  DotNetHost.h  ScriptsAPI.cpp
Scripts/DotNet/ScriptLoader/: Loader.cs  ScriptLoader.csproj
Scripts/DotNet/UserScripts/: Example.cs  Input.cs  ScriptAPI.cs  ScriptManager.cs  UserScripts.csproj
Scripts/Engine/: Example.cpp  Example.h
Shaders/: triangle.metal
Stela/: CMakeLists.txt
Stela/src/: DynamicLibrary.cpp  DynamicLibrary.h  Stela.cpp  Stela.h
Stela/src/Input/: Input.cpp  Input.h
Stela/src/Render/Metal/: Metal.h  Metal.mm  MetalPrivate.mm
Stela/src/Render/Vulkan/: Vulkan.cpp  Vulkan.h
Stela/src/Scripts/: DotNetHost.cpp  DotNetHost.h  EngineGlobals.cpp  EngineGlobals.h  RegisterSystem.h  ScriptEngine.cpp  ScriptEngine.h  ScriptsAPI.h
src/: CMakeLists.txt  main.cpp
